--- a/src/shared/generic/MobileSelect/MobileSelect.scss
+++ b/src/shared/generic/MobileSelect/MobileSelect.scss
@@ -185,5 +185,9 @@ $card-back: #f8fafc;
         box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
       }
     }
+
+    > .mobile-select-control {
+      margin: 0;
+    }
   }
 }
